--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
         "lib": [
             "es6"
         ],
-        "sourceMap": true,
-        "rootDir": "."
+        "sourceMap": true
     },
     "exclude": [
         "node_modules",
