--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Adds a status bar item when linked npm modules are detected",
   "version": "0.0.1",
   "publisher": "roblourens",
+  "icon": "images/node-debug-icon.png",
   "engines": {
     "vscode": "^1.11.0"
   },
