--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Adds a status bar item when linked npm modules are detected",
   "version": "0.0.1",
   "publisher": "roblourens",
-  "icon": "images/node-debug-icon.png",
+  "icon": "images/npm_icon.png",
+  "bugs": "https://github.com/roblourens/npm-link-status/issues",
   "engines": {
     "vscode": "^1.11.0"
   },
