--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "npm-link-status",
   "displayName": "NPM Link Status",
   "description": "Adds a status bar item when linked npm modules are detected",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "roblourens",
   "icon": "images/npm_icon.png",
   "bugs": "https://github.com/roblourens/npm-link-status/issues",
   "engines": {
-    "vscode": "^1.11.0"
+    "vscode": "^1.15.0"
   },
   "categories": [
     "Other"
@@ -35,11 +35,11 @@
     "test": "node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
-    "typescript": "^2.0.3",
-    "vscode": "^1.0.0",
-    "mocha": "^2.3.3",
+    "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.40",
-    "@types/mocha": "^2.2.32"
+    "mocha": "^2.3.3",
+    "typescript": "^2.4.2",
+    "vscode": "^1.0.0"
   },
   "dependencies": {
     "promisify-node": "^0.4.0"
