--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "lib": [
             "es6"
         ],
-        "sourceMap": true
+        "sourceMap": true,
+        "rootDir": "."
     },
     "exclude": [
         "node_modules",
